About company page - overflow fix

--- a/src/stylesheets/layout/_about-company.scss
+++ b/src/stylesheets/layout/_about-company.scss
@@ -1,4 +1,6 @@
 .about-company {
+  overflow: hidden;
+
   &__content {
     @include media-breakpoint-up(lg) {
       padding: 0 66rem;
